# Project_kurs_2

./: examanation_python.py  pyproject.toml
src/: api_hh.py  main.py  utils.py  vacancies.py  working_files.py
tests/: conftest.py  test_api_hh.py  test_vacancy.py  test_working_files.py
